# valkey-ldap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  HOWTORELEASE.md  LICENSE  README.md  build.rs
.github/: package-platforms.json
.github/workflows/: cargo-format.yml  ci.yml  clang-format.yml  nightly_packaging.yml  packages.yml  release_packaging.yml  trigger_ldap_release.yml
cmake/: FindOpenLdap.cmake
packaging/: build_rpm.sh  build_srpm.sh  valkey-ldap.spec.in
packaging/debian/: changelog  control  copyright  rules  valkey-ldap.install
scripts/: build-container-deb.sh  build-container-rpm.sh  docker-compose.yaml  extract_changelog.sh  generate_test_certificates.sh  install-rust-toolchain.sh  populate_ldap.sh  run_integration_tests.sh  run_perf_test.sh  run_test_cli.sh  run_unit_tests.sh  setup-ldap.sh  start_valkey_ldap.sh  stop_valkey_ldap.sh  test-module-package.sh
scripts/docker/: Dockerfile-valkey-ldap  Dockerfile-valkey-ldap-7.2  Dockerfile-valkey-ldap-8.0  Dockerfile-valkey-ldap-8.1  docker-compose.yaml
src/: .clang-format  auth.rs  commands.rs  configs.rs  lib.rs  logging.rs  module.c  version.rs  vk_ldap.c  vk_ldap.h  vkldap.rs
src/vkldap/: connection.rs  context.rs  errors.rs  failure_detector.rs  mod.rs  scheduler.rs  server.rs  settings.rs
test/: CMakeLists.txt  CTestCustom.cmake  ldap_groups.txt  ldap_users.txt  valkey.conf
test/integration/: CMakeLists.txt  conftest.py  requirements.txt  test_ldap.py  test_sanity.py  util.py
test/perf/: auth_requests.py
test/unit/: CMakeLists.txt  test_sanity.cpp  test_vk_ldap.cpp  vk_ldap_test.cpp
