[package]
name = "valkey-ldap"
authors = ["Ricardo Dias"]
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "BSD-3-Clause"
repository = "https://github.com/rjd15372/valkey-ldap"
description = "An LDAP authentication module for Valkey"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
enable-system-alloc = ["valkey-module/enable-system-alloc"]

[dependencies]
valkey-module = "0.1.8"
ldap3 = "0.11.5"
