[package]
name = "valkey-ldap"
authors = ["Ricardo Dias"]
version = "0.0.1-dev"
edition = "2024"
build = "build.rs"
license = "BSD-3-Clause"
repository = "https://github.com/valkey-io/valkey-ldap"
description = "An LDAP authentication module for Valkey"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = ["min-valkey-compatibility-version-8-0"]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
min-redis-compatibility-version-7-2 = ["valkey-module/min-redis-compatibility-version-7-2"]
min-valkey-compatibility-version-8-0 = ["valkey-module/min-valkey-compatibility-version-8-0"]

[dependencies]
valkey-module = "0.1.9"
ldap3 = "0.11.5"
lazy_static = "1.5.0"
paste = "1.0.15"
url = "2.5.4"
log = "0.4.27"
native-tls = "0.2.14"
rand = "0.9.1"
const-str = "0.6.2"
futures = "0.3.31"
tokio = {version="1.45.0", features=["rt", "rt-multi-thread", "macros"]}
